# Weapons-vs-magic

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  run.cpp
assets/scripts/: Main scenario.json  Test save.json
external_lib/: CMakeLists.txt
external_lib/g_creators_lib/: CMakeLists.txt
external_lib/g_creators_lib/creators_lib/: CMakeLists.txt
external_lib/g_creators_lib/creators_lib/include/: effect_creators.hpp  enemy_creators.hpp  tower_creators.hpp  trap_creators.hpp
external_lib/g_creators_lib/creators_lib/source/: effect_creators.cpp  enemy_creators.cpp  tower_creators.cpp  trap_creators.cpp
external_lib/g_creators_lib/factory_init/: CMakeLists.txt
external_lib/g_creators_lib/factory_init/include/: inits.hpp
external_lib/g_creators_lib/factory_init/source/: inits.cpp
external_lib/g_entities/: CMakeLists.txt
external_lib/g_entities/entities_lib/: CMakeLists.txt
external_lib/g_entities/entities_lib/defence_entities/: CMakeLists.txt
external_lib/g_entities/entities_lib/effect_types/: CMakeLists.txt
external_lib/g_entities/entities_lib/enemy_entities/: CMakeLists.txt
external_lib/g_entities/g_entities/: CMakeLists.txt
external_lib/g_entities/g_entities/g_enemies/: CMakeLists.txt
external_lib/g_entities/g_entities/g_towers/: CMakeLists.txt
external_lib/g_entities/g_entities/g_traps/: CMakeLists.txt
graphics/: CMakeLists.txt
graphics/g_core/: CMakeLists.txt
graphics/g_core/g_nodes/: CMakeLists.txt
graphics/g_core/g_nodes/include/: g_nodes.hpp
graphics/g_core/g_nodes/source/: g_nodes.cpp
graphics/g_core/game_state/: CMakeLists.txt
graphics/g_core/game_state/include/: game_state.hpp
graphics/g_core/game_state/source/: game_state.cpp
graphics/g_core/renderable/: renderable.hpp
graphics/g_core/texture_manager/: CMakeLists.txt
graphics/g_core/texture_manager/include/: texture_manager.hpp
graphics/g_core/texture_manager/source/: texture_manager.cpp
graphics/menus/: CMakeLists.txt
graphics/menus/info_menu/: CMakeLists.txt
graphics/menus/info_menu/include/: info_menu.hpp
graphics/menus/info_menu/source/: info_menu.cpp
graphics/menus/tower_menu/: CMakeLists.txt
graphics/menus/tower_menu/include/: tower_menu.hpp
graphics/menus/tower_menu/source/: tower_menu.cpp
graphics/menus/trap_menu/: CMakeLists.txt
graphics/menus/trap_menu/include/: trap_menu.hpp
graphics/menus/trap_menu/source/: trap_menu.cpp
graphics/render_manager/: CMakeLists.txt
graphics/render_manager/include/: drawfuncs.hpp  render_manager.hpp
graphics/render_manager/source/: drawfuncs.cpp  render_manager.cpp
source/: CMakeLists.txt
source/core_lib/: CMakeLists.txt
source/core_lib/castle/: CMakeLists.txt
source/core_lib/castle/include/: castle.hpp
source/core_lib/castle/source/: castle.cpp
source/core_lib/effect_holders/: CMakeLists.txt
source/core_lib/effect_holders/include/: effected.hpp  magic.hpp
source/core_lib/effect_holders/source/: effected.cpp  magic.cpp
source/core_lib/interfaces/: CMakeLists.txt
source/core_lib/interfaces/factories/: i_effect_factory.hpp  i_enemy_factory.hpp  i_factory_manager.hpp  i_tower_factory.hpp  i_trap_factory.hpp
source/core_lib/interfaces/object_interfaces/: i_defence.hpp  i_enemy.hpp  i_lair.hpp  i_sys_manager.hpp  i_system.hpp  i_tower.hpp  i_trap.hpp
source/core_lib/interfaces/traits/: damagable.hpp  effect.hpp  entity.hpp  object.hpp  persistable.hpp  shooting.hpp
source/core_lib/layout/: CMakeLists.txt
source/core_lib/layout/include/: coordinates.hpp  layout.hpp  tile.hpp
source/core_lib/layout/matrix/: CMakeLists.txt
source/core_lib/layout/source/: layout.cpp
source/factories_lib/: CMakeLists.txt
source/factories_lib/effect_factory/: CMakeLists.txt
source/factories_lib/effect_factory/include/: effect_factory.hpp
source/factories_lib/effect_factory/source/: effect_factory.cpp
source/factories_lib/enemy_factory/: CMakeLists.txt
source/factories_lib/enemy_factory/include/: enemy_factory.hpp
source/factories_lib/enemy_factory/source/: enemy_factory.cpp
source/factories_lib/factory_manager/: CMakeLists.txt
source/factories_lib/factory_manager/include/: factory_manager.hpp
source/factories_lib/tower_factory/: CMakeLists.txt
source/factories_lib/trap_factory/: CMakeLists.txt
source/game_lib/: CMakeLists.txt
source/game_lib/include/: game.hpp
source/game_lib/source/: game.cpp  game_persistence.cpp
source/lair_lib/: CMakeLists.txt
source/lair_lib/include/: lair.hpp
source/lair_lib/source/: lair.cpp
source/systems_lib/: CMakeLists.txt
source/systems_lib/system_manager/: CMakeLists.txt
source/systems_lib/system_types/: CMakeLists.txt
source/systems_lib/system_types/include/: defence_system.hpp  effect_system.hpp  enemy_system.hpp  lair_system.hpp
source/systems_lib/system_types/source/: defence_system.cpp  effect_system.cpp  enemy_system.cpp  lair_system.cpp
tests/: CMakeLists.txt
tests/test_entities/: CMakeLists.txt  mocks_and_fixtures.hpp
tests/test_entities/test_effects/: test_effected.cpp  test_effects.cpp
tests/test_entities/test_entities_noupdate/: test_castle.cpp  test_enemy.cpp  test_tower.cpp  test_trap.cpp  tower_fixture.hpp
tests/test_factories/: CMakeLists.txt  factories_fixtures.hpp  test_effect_factory.cpp  test_enemy_factory.cpp  test_tower_factory.cpp  test_trap_factory.cpp
tests/test_layout/: CMakeLists.txt
tests/test_layout/test_layout/: layout_fixtures.hpp  test_layout.cpp  test_tile.cpp
tests/test_layout/test_matrix/: matrix_fixtures.hpp  test_iterator.cpp  test_matrix.cpp  test_rowproxy.cpp
tests/test_systems/: CMakeLists.txt
tests/test_systems/test_entities_updates/: test_death.cpp  test_enemy_classes.cpp  test_lair.cpp  test_traps.cpp  test_updates.cpp  update_fixtures.hpp
tests/test_systems/test_system/: system_fixtures.hpp  test_manager.cpp  test_systems.cpp
tests/utility/: CMakeLists.txt
tests/utility/include/: creators.hpp
tests/utility/source/: creators.cpp
timetest/: CMakeLists.txt  timetest.cpp
timetest/time_creators/: time_creators.cpp  time_creators.hpp
(+53 files in other folders)
